--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
         height: 2rem;
         width: 20rem;
       }
+      img{
+        max-width: 500px;
+      }
     </style>
   </head>
 
@@ -84,7 +87,7 @@
               <img
                   src="HERO.webp"
                   alt="Hero section image of html"
-                  width="500"
+                  width="100%"
                   height="auto"
               />
           </figure>
